change výdělek jedince

--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -97,7 +97,7 @@
                 <th>Cena dospělce</th>
                 <th>Spotřeba</th>
                 <th>Druh potravy</th>
-                <th>Cena produkce jedince</th>
+                <th>Výdělek jedince</th>
                 <th>Produkt</th>
             </tr>
         </thead>
