Fix revert issues

--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -132,8 +132,18 @@ p {
     margin: 0 auto;
     max-width: 600px;
     text-align: left;
+    margin-bottom: 10px;
 }
 
+.about-section ul {
+    font-size: 1rem;
+    line-height: 1.4;
+    font-weight: 600;
+    margin: 0 auto;
+    max-width: 600px;
+    text-align: left;
+    margin-bottom: 10px;
+}
 
 section {
     position: relative;
@@ -243,14 +253,14 @@ article .labels span.orange {
 }
 
 .center {
-    position: absolute;
-    top: 0;
-    bottom: 0;
+    /* position: absolute;
+    top: 200px;
     left: 0;
-    right: 0;
+    right: 0; */
     margin: auto;
     display: block;
     text-align: center;
+    z-index: 5;
 }
 
 .background {
@@ -258,6 +268,7 @@ article .labels span.orange {
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0px !important;
+    color: white;
 }
 
 .intro {
