--- a/pastvina/templates/pastvina/index.html
+++ b/pastvina/templates/pastvina/index.html
@@ -7,17 +7,10 @@
 {% block content %}
 
 <!-- Úvod -->
-<section class="full-height full-width landing background">
+<section style="display: flex;" class="full-height full-width landing background">
     <div class="overlay"></div>
     <div class="center">
     <h1>A s kým paseš kozy ty?</h1>
-    </div>
-</section>
-
-<section class="about-section">
-    <div class="container">
-    <h1>Zajímavá informace.</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 </section>
 
