change labels, add hover text to money changes

--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -149,7 +149,7 @@
                 </div>
                 <div>
                     <input id="kill-ls-count-{{ls.id}}" class="full-width" type="number" value=0 min="0">
-                    <button id="kill-ls-button-{{ls.id}}" class="action-button full-width" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Utratit (max&nbsp;<span id="ls-kill-limit-{{ls.id}}">-&nbsp;</span>)</button>
+                    <button id="kill-ls-button-{{ls.id}}" class="action-button full-width" onclick="requestTrade('kill', 'ls', {{ls.id}}, document.getElementById('kill-ls-count-{{ls.id}}').value)">Vypustit do divočiny (max&nbsp;<span id="ls-kill-limit-{{ls.id}}">-&nbsp;</span>)</button>
                 </div>
             </div>
         </div>
