--- a/pastvina/templates/pastvina/parts/game_header.html
+++ b/pastvina/templates/pastvina/parts/game_header.html
@@ -2,7 +2,7 @@
 <div id="game-header">
     <div class="horizontal-apart game-header dark-color">
         <div class="horizontal-packed-container">
-            <div>Peníze: <span id="game-money">-</span> (-<span id="consumption-money">0</span>)</div>
+            <div>Peníze: <span id="game-money">-</span> <span  title="Útrata za krmivo zvířat">(-<span id="consumption-money">0</span>)</span> <span title="Zisk z produkce zvířat">(+<span id="production-money">0</span>)</span></div>
             <div>Sklad plodin: <span id="crop-rotting-total">0</span>&nbsp;(+<span id="next-tick-new-rotting">0</span>)&nbsp;/&nbsp;{{ crop_storage_size }}</div>
             <div>Prodáno dobytka: <span id="ls-sold-amount">0</span>&nbsp;/&nbsp;{{ round.livestock_slaughter_limit }}</div>
         </div>
