--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -19,53 +19,53 @@
     <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte
     zvířata a snažíte se maximalizovat svůj zisk.</p>
 
-    <p>Hrát na body budete celkem třikrát. První kolo bude začínat 16:10. Do té
-    doby si budete moci nastudovat pravidla a odehrát připravené testovací
+    <p>Hrát na body budete celkem třikrát. První ostré kolo bude začínat 14:55. 
+    Do té doby si budete moci nastudovat pravidla a vyzkoušet připravené testovací
     kolo, které slouží k tomu, abyste se mohli blíže seznámit s rozhraním hry a
     pochopit její základní principy. Doporučujeme ho využít k tvorbě strategie
     pro následující soutěžní kola.</p>
 
     <p>Následující kola budou trvat zhruba 15 minut. Po každém kole budete mít
-    10 minut na analýzu vaší strategie a případnou přípravu strategie nové.</p>
+    cca 10 minut na analýzu vaší strategie a případnou přípravu strategie nové.</p>
 
     <p>Na začátku každého kola máte k dispozici 1 000 peněz, za které můžete
-    nakupovat plodiny a zvířata. Ty pak můžete sklízet (popř. porážet) a
+    nakupovat plodiny a zvířata. Ty pak můžete sklízet nebo porážet a
     prodávat, čímž si vyděláte další peníze, za které můžete dále nakupovat
     atd. Plodiny stačí zasadit a počkat, až vyrostou. Pokud je váš sklad plný a
-    právě vám dozrála jedna nová plodina, umístí se do skladu na úkor
+    právě vám dozrála určitá nová plodina, umístí se do skladu na úkor
     patřičného množství vaší nejstarší plodiny (která shnije). Pokud přidáváte
-    zároveň naráz do skladu více plodin různého druhu, které se tam nevejdou
-    všechny, přidávají se postupně od té, kterou v tabulce vidíte nejvíce
-    nahoře, ostatní shnijí.</p>
+    zároveň do skladu více plodin různého druhu, které se tam všechny nevejdou,
+    přidávají se postupně od té, kterou v tabulce plodin vidíte nejvíce
+    nahoře, ty co se nevejdou, shnijí.</p>
 
-    <p>Zvířata musíte krmit, a to plodinami, které s vlastnictvím zvířat
-    automaticky nakupujete. Pokud na tyto plodiny nemáte peníze a jakoukoli
-    část vámi chovaných zvířat nejste schopni uživit, zemřou všechna vaše
-    zvířata. Proto je možné některá zvířata dle vašeho výběru utratit. Zvířata
-    po nakrmení generují každou iteraci od dosažení dospělosti určitý produkt,
-    za který vám systém automaticky přičítá jeho aktuální cenu produkce
-    jedince.</p>
+    <p>Zvířata musíte krmit plodinami, které s vlastnictvím zvířat automaticky
+    nakupujete za aktuální cenu. Pokud na tyto plodiny nemáte peníze a jakoukoli
+    část vámi chovaných zvířat tak nejste schopni uživit, zemřou všechna vaše
+    zvířata. Proto je možné některá zvířata dle vašeho výběru vypustit. Zvířata
+    po nakrmení generují každou iteraci od dosažení dospělosti produkty,
+    za které vám systém automaticky přičítá jejich aktuální cenu.</p>
 
     <p>Informace o jednotlivých surovinách najdete v tabulkách v rozhraní hry.
-    Jediná položka, která se mění, je cena. Hraje se tahově, přičemž v prvním
-    kole bude 30 iterací po 30 s a ve druhém a třetím kole 45 iterací po 20 s.
-    V každé iteraci je možné provést pouze jeden nákup a jeden prodej každé z
-    komodit. Po každé iteraci se uloží zaklikané změny a odešlou se k
-    vyhodnocení. V návaznosti na tahu vás a vašich soupeřů se změní situace na
-    trhu a upraví se ceny plodin a zvířat.</p>
+    Jediná položka, která se mění, je finální cena komodit (dospělců, plodin 
+    a produktů). Hraje se tahově, přičemž v prvním kole bude 30 iterací po 30 s 
+    a ve druhém a třetím kole 45 iterací po 20 s. V každé iteraci je možné 
+    provést pouze jeden nákup a jeden prodej každé z komodit. Po každé iteraci 
+    se uloží zaklikané změny a odešlou se k vyhodnocení. V návaznosti na tahu 
+    vás a vašich soupeřů se změní situace na trhu a upraví se ceny plodin, 
+    zvířat a produktů.</p>
 </section>
 
 <section class="padding-small light rules">
     <h3>Dejte si pozor na následující věci:</h3>
     <ul>
-    <li>Ceny všech surovin se mění s časem.</li>
+    <li>Ceny finálních komodit se mění s časem.</li>
     <li>Když nebudete mít dost peněz na nakrmení všech zvířat, zemřou vám
-    všechna. Proto je dobré zvířata, která nezvládnete uživit, utratit.</li>
-    <li>Sklad plodin má jen omezenou kapacitu. </li>
+    všechna. Proto je dobré zvířata, která nezvládnete uživit, vypustit.</li>
+    <li>Sklad plodin má jen omezenou kapacitu. Po uzrání sklidíte pouze množství 
+    odpovídající volnému místu ve skladu.</li>
     <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují.</li>
-    <li>Je zaznamenán pouze první nákup/prodej dané komodity v jedné iteraci.
-    Další akce stejného typu nebudou počítány. Dobře se tedy v týmu
-    domluvte.</li>
+    <li>Je zaznamenáván pouze první nákup/prodej dané komodity v jedné iteraci.
+    Další akce stejného typu nebudou počítány. Dobře se tedy v týmu domluvte.</li>
     </ul>
 </section>
 
@@ -78,12 +78,13 @@
 
     <p>V horní části stránky se nachází informační panel. Na jeho levé straně
     vidíte vaši současnou hotovost, kapacitu skladu plodin a počet zvířat,
-    které ještě můžete během dané iterace porazit, na pravé pak čas zbývající
-    ado konce iterace a číslo aktuální iterace.</p>
+    které ještě můžete během dané iterace porazit, na pravé pak číslo aktuální 
+    iterace a čas zbývající do konce iterace.</p>
 
     <p>V následující části najdete přehledy plodin a dobytka. V tabulkách
     najdete důležité vlastnosti včetně měnících se cen, v grafech pak současný
-    stav svých polí, pastvin a své stodoly.</p>
+    stav svých polí a pastvin. Dále jsou zde tlačítka pro koupi, prodej, případně
+    vypuštění zvířat a hodnota maximálního množství dané operace.</p>
 </section>
 
 <section class="padding-small light rules">
@@ -113,12 +114,10 @@
     <h3>Hodnocení:</h3>
     <p>
         <ul>
-        <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 70 %
+        <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 60 %
         celkového hodnocení.</li>
-        <li>Své analýzy, strategie a informace o průběhu hry sepište do jednoho
-        dokumentu a odevzdejte ve formátu pdf do odevzdárny na stránkách
-        http://ntrophy.cz/.</li>
-        <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. Neopouštějte proto hovor po skončení posledního kola hry.</li>
+        <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. 
+        Buďte na to prosím připraveni po skončení posledního kola hry.</li>
         </ul>
     </p>
 </section>
