--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -41,8 +41,8 @@
     <p>Zvířata musíte krmit plodinami, které s vlastnictvím zvířat automaticky
     nakupujete za aktuální cenu. Pokud na tyto plodiny nemáte peníze a jakoukoli
     část vámi chovaných zvířat tak nejste schopni uživit, zemřou všechna vaše
-    zvířata. Proto je možné některá zvířata dle vašeho výběru vypustit. Zvířata
-    po nakrmení generují každou iteraci od dosažení dospělosti produkty,
+    zvířata. Proto je možné některá zvířata dle vašeho výběru vypustit do divočiny. 
+    Zvířata po nakrmení generují každou iteraci od dosažení dospělosti produkty,
     za které vám systém automaticky přičítá jejich aktuální cenu.</p>
 
     <p>Informace o jednotlivých surovinách najdete v tabulkách v rozhraní hry.
@@ -60,7 +60,8 @@
     <ul>
     <li>Ceny finálních komodit se mění s časem.</li>
     <li>Když nebudete mít dost peněz na nakrmení všech zvířat, zemřou vám
-    všechna. Proto je dobré zvířata, která nezvládnete uživit, vypustit.</li>
+    všechna. Proto je dobré část zvířat, kterou nezvládnete uživit, vypustit 
+    do divočiny.</li>
     <li>Sklad plodin má jen omezenou kapacitu. Po uzrání sklidíte pouze množství 
     odpovídající volnému místu ve skladu.</li>
     <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují.</li>
