--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -117,8 +117,8 @@
         <ul>
         <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 60 %
         celkového hodnocení.</li>
-        <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek. 
-        Buďte na to prosím připraveni po skončení posledního kola hry.</li>
+        <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek.
+        Rozhovor bude nahráván. Buďte na to prosím připraveni po skončení posledního kola hry.</li>
         </ul>
     </p>
 </section>
