--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -433,13 +433,15 @@ a {
 .game-wrapper {
     margin: 4px;
     background-color: #e5e5e5;
-    padding: 10px;
 }
 
-.stats-wrapper {
-    background-color: #ddd;
-    padding: 15px 0px 30px 0px;
-    margin-bottom: 35px;
+.game-ref {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .green {
