--- a/pastvina/templates/pastvina/game_overview.html
+++ b/pastvina/templates/pastvina/game_overview.html
@@ -18,7 +18,7 @@
             {% for round in rounds %}
             <div class="game-wrapper">
                 <a class="game-ref" href="{% url 'game' round.id %}">
-                <div>
+                <div style="padding: 10px 20px;">
                     <h3>{{round.name}}</h3>
                     <p>{{round.start_nice_str}} – {{round.end_nice_str}}</p>
                     <p>Počet iterací: {{round.ticks}}</p>
@@ -40,7 +40,7 @@
         {% for round in rounds %}
         <div class="game-wrapper">
             <a class="game-ref" href="{% url 'round_stats' round.id %}">
-                <h3>{{round.name}}<h3>
+                <h3>{{round.name}}</h3>
             </a>
         </div>
         {% endfor %}
