Add init time check page

--- a/pastvina/templates/pastvina/parts/menu.html
+++ b/pastvina/templates/pastvina/parts/menu.html
@@ -11,6 +11,7 @@
 
     <a href="{% url 'rules' %}">Pravidla</a>
     <a href="{% url 'game_overview' %}">Hrát</a>
+    <a href="{% url 'time_check' %}">Kontrola času</a>
 
     </div>
     <div class="horizontal-packed-container">
