--- a/pastvina/static/pastvina/css/main.css
+++ b/pastvina/static/pastvina/css/main.css
@@ -281,6 +281,7 @@ article .labels span.orange {
     left: 0;
     right: 0; */
     margin: auto;
+    padding: 20px;
     display: block;
     text-align: center;
     z-index: 5;
@@ -343,6 +344,12 @@ article .labels span.orange {
     color: white;
 }
 
+.dark-color-transparent {
+    background-color: #383838;
+    background: rgb(70, 80, 60);
+    background: rgba(70, 80, 60, 0.5);
+    color: white;
+}
 
 p.alert,
 span.alert {
