--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -60,7 +60,8 @@
     do divočiny.</li>
     <li>Sklad plodin má jen omezenou kapacitu. Po uzrání sklidíte pouze množství 
     odpovídající volnému místu ve skladu.</li>
-    <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují.</li>
+    <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují. Krmivo je 
+    kupováno, nelze krmit vlastní produkcí</li>
     <li>Je zaznamenáván pouze první nákup/prodej dané komodity v jedné iteraci.
     Další akce stejného typu nebudou počítány. Dobře se tedy v týmu domluvte.</li>
     </ul>
