--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -61,7 +61,7 @@
     <li>Sklad plodin má jen omezenou kapacitu. Po uzrání sklidíte pouze množství 
     odpovídající volnému místu ve skladu.</li>
     <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují. Krmivo je 
-    kupováno, nelze krmit vlastní produkcí</li>
+    kupováno, nelze krmit vlastní produkcí.</li>
     <li>Je zaznamenáván pouze první nákup/prodej dané komodity v jedné iteraci.
     Další akce stejného typu nebudou počítány. Dobře se tedy v týmu domluvte.</li>
     </ul>
