Change trade request to post

--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -1,10 +1,13 @@
 {% extends "pastvina/base.html" %}
 {% load extras %}
+{% load static %}
 
 {% block title %} {{ round.name }} | Logika N-Trophy {% endblock%}
 
 {% block head %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static "pastvina/js/trade.js" %}"></script>
+<script>var csrf_token="{{ csrf_token }}";</script>
 {% endblock %}
 
 {% block content %}
