--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -6,8 +6,9 @@
 
 {% block head %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="{% static "pastvina/js/trade.js" %}"></script>
 <script>var csrf_token="{{ csrf_token }}";</script>
+<script src="{% static "pastvina/js/update_charts.js" %}"></script>
+<script src="{% static "pastvina/js/trade.js" %}"></script>
 {% endblock %}
 
 {% block content %}
