--- a/pastvina/templates/pastvina/time_check.html
+++ b/pastvina/templates/pastvina/time_check.html
@@ -53,6 +53,7 @@
                 data.response_time = responseTime;
                 console.log(data);
                 if (!updateResults(data.request_time, data.server_time, responseTime)) {
+                    console.error("Nastala chyba při komunikaci se serverem se serverem.");
                     alert("Nastala chyba při komunikaci se serverem se serverem.");
                 }
             })
@@ -67,6 +68,7 @@
                     console.log(textStatus);
                     console.log(error);
                 }
+                console.error("Nepodařilo se spojit se serverem.\n" + userErrorText);
                 alert("Nepodařilo se spojit se serverem.\n" + userErrorText);
             });
         }
@@ -97,9 +99,11 @@
             if (clientServerTime < 0) {
                 errorMsgElem.css("display", "");
                 errorMsgElem.text("Vaše lokální hodiny jsou dopředu o " + (-clientServerTime / 1000) + " s");
+                console.error("Vaše lokální hodiny jsou dopředu o " + (-clientServerTime / 1000) + " s");
             } else if(serverClientTime < 0) {
                 errorMsgElem.css("display", "");
                 errorMsgElem.text("Vaše lokální hodiny jsou pozadu o " + (-serverClientTime / 1000) + " s");
+                console.error("Vaše lokální hodiny jsou pozadu o " + (-serverClientTime / 1000) + " s");
             } else {
                 errorMsgElem.css("display", "none");
                 errorMsgElem.text("");
