--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -73,15 +73,30 @@
                     </table>
                 </div>
                 <div>
+                    <table class="table-amounts">
+                        <tr>
+                            <td style="font-weight: bolder;" colspan="2">Akce iterace</td>
+                        </tr>
+                        <tr>
+                            <td>Nakoupeno</th>
+                            <td><span id="crop-bought-amount-{{crop.id}}">0</span></td>
+                        </tr>
+                        <tr>
+                            <td>Prodáno</th>
+                            <td><span id="crop-sold-amount-{{crop.id}}">0</span></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            {% include "pastvina/parts/age_chart.html" with chart_type="crop" color=crop.color name=crop.name name_genitive=crop.name_genitive id=crop.id growth_time=crop.growth_time life_time=crop.rotting_time %}
+            <div class="trade-inputs">
+                <div>
                     <div class="full-width horizontal-container">
                         <input id="buy-crop-count-{{crop.id}}" type="number" value=0 min="0">
                         <p>(max&nbsp;<span id="crop-buy-limit-{{crop.id}}">-&nbsp;</span>)</p>
                     </div>
                     <button id="buy-crop-button-{{crop.id}}" class="full-width" onclick="requestTrade('buy', 'crop', {{crop.id}}, document.getElementById('buy-crop-count-{{crop.id}}').value)">Koupit</button>
                 </div>
-            </div>
-            {% include "pastvina/parts/age_chart.html" with chart_type="crop" color=crop.color name=crop.name name_genitive=crop.name_genitive id=crop.id growth_time=crop.growth_time life_time=crop.rotting_time %}
-            <div class="trade-inputs">
                 <div>
                     <div class="full-width horizontal-container">
                         <input id="sell-crop-count-{{crop.id}}" type="number" value=0 min="0">
@@ -147,15 +162,34 @@
                     </table>
                 </div>
                 <div>
+                    <table class="table-amounts">
+                        <tr>
+                            <td style="font-weight: bolder;" colspan="2">Akce iterace</td>
+                        </tr>
+                        <tr>
+                            <td>Nakoupeno</th>
+                            <td><span id="ls-bought-amount-{{ls.id}}">0</span></td>
+                        </tr>
+                        <tr>
+                            <td>Prodáno</th>
+                            <td><span id="ls-sold-amount-{{ls.id}}">0</span></td>
+                        </tr>
+                        <tr>
+                            <td>Vypuštěno</th>
+                            <td><span id="ls-killed-amount-{{ls.id}}">0</span></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            {% include "pastvina/parts/age_chart.html" with chart_type="livestock" color=ls.color name=ls.name name_genitive=ls.name_genitive id=ls.id growth_time=ls.growth_time life_time=ls.life_time %}
+            <div class="trade-inputs">
+                <div>
                     <div class="full-width horizontal-container">
                         <input id="buy-ls-count-{{ls.id}}" type="number" value=0 min="0">
                         <p>(max&nbsp;<span id="ls-buy-limit-{{ls.id}}">-&nbsp;</span>)</p>
                     </div>
                     <button id="buy-ls-button-{{ls.id}}" class="full-width" onclick="requestTrade('buy', 'ls', {{ls.id}}, document.getElementById('buy-ls-count-{{ls.id}}').value)">Koupit</button>
                 </div>
-            </div>
-            {% include "pastvina/parts/age_chart.html" with chart_type="livestock" color=ls.color name=ls.name name_genitive=ls.name_genitive id=ls.id growth_time=ls.growth_time life_time=ls.life_time %}
-            <div class="trade-inputs">
                 <div>
                     <div class="full-width horizontal-container">
                         <input id="sell-ls-count-{{ls.id}}" type="number" value=0 min="0">
