--- a/pastvina/templates/pastvina/rules.html
+++ b/pastvina/templates/pastvina/rules.html
@@ -13,57 +13,57 @@
 <section class="padding-small dark rules">
     <h3>O hře</h3>
     <p>Na následujících 90 minut se stáváte farmáři, pěstujete plodiny, chováte
-    zvířata a snažíte se maximalizovat svůj zisk.</p>
+    zvířata a&nbsp;snažíte se maximalizovat svůj zisk.</p>
 
-    <p>Hrát na body budete celkem třikrát. První ostré kolo bude začínat 15:00. 
-    Do té doby si budete moci nastudovat pravidla a vyzkoušet připravené testovací
-    kolo, které slouží k tomu, abyste se mohli blíže seznámit s rozhraním hry a
-    pochopit její základní principy. Doporučujeme ho využít k tvorbě strategie
+    <p>Hrát na body budete celkem třikrát. První ostré kolo bude začínat 15:00.
+    Do té doby si budete moci nastudovat pravidla a&nbsp;vyzkoušet připravené testovací
+    kolo, které slouží k&nbsp;tomu, abyste se mohli blíže seznámit s&nbsp;rozhraním hry
+    a&nbsp;pochopit její základní principy. Doporučujeme ho využít k&nbsp;tvorbě strategie
     pro následující soutěžní kola.</p>
 
     <p>Následující kola budou trvat zhruba 15 minut. Po každém kole budete mít
-    cca 5 minut na analýzu vaší strategie a případnou přípravu strategie nové.</p>
+    cca 5 minut na analýzu vaší strategie a&nbsp;případnou přípravu strategie nové.</p>
 
-    <p>Na začátku každého kola máte k dispozici 1 000 peněz, za které můžete
-    nakupovat plodiny a zvířata. Ty pak můžete sklízet nebo porážet a
+    <p>Na začátku každého kola máte k&nbsp;dispozici 1&nbsp;000 peněz, za které můžete
+    nakupovat plodiny a&nbsp;zvířata. Ty pak můžete sklízet nebo porážet a
     prodávat, čímž si vyděláte další peníze, za které můžete dále nakupovat
-    atd. Plodiny stačí zasadit a počkat, až vyrostou. Pokud je váš sklad plný a
-    právě vám dozrála určitá nová plodina, umístí se do skladu na úkor
+    atd. Plodiny stačí zasadit a&nbsp;počkat, až vyrostou. Pokud je váš sklad plný
+    a&nbsp;právě vám dozrála určitá nová plodina, umístí se do skladu na úkor
     patřičného množství vaší nejstarší plodiny (která shnije). Pokud přidáváte
     zároveň do skladu více plodin různého druhu, které se tam všechny nevejdou,
-    přidávají se postupně od té, kterou v tabulce plodin vidíte nejvíce
+    přidávají se postupně od té, kterou v&nbsp;tabulce plodin vidíte nejvíce
     nahoře, ty co se nevejdou, shnijí.</p>
 
-    <p>Zvířata musíte krmit plodinami, které s vlastnictvím zvířat automaticky
-    nakupujete za aktuální cenu. Pokud na tyto plodiny nemáte peníze a jakoukoli
+    <p>Zvířata musíte krmit plodinami, které s&nbsp;vlastnictvím zvířat automaticky
+    nakupujete za aktuální cenu. Pokud na tyto plodiny nemáte peníze a&nbsp;jakoukoli
     část vámi chovaných zvířat tak nejste schopni uživit, zemřou všechna vaše
-    zvířata. Proto je možné některá zvířata dle vašeho výběru vypustit do divočiny. 
+    zvířata. Proto je možné některá zvířata dle vašeho výběru vypustit do divočiny.
     Zvířata po nakrmení generují každou iteraci od dosažení dospělosti produkty,
     za které vám systém automaticky přičítá jejich aktuální cenu.</p>
 
-    <p>Informace o jednotlivých surovinách najdete v tabulkách v rozhraní hry.
-    Jediná položka, která se mění, je finální cena komodit (dospělců, plodin 
-    a produktů). Hraje se tahově, přičemž v prvním kole bude 30 iterací po 30 s 
-    a ve druhém a třetím kole 45 iterací po 20 s. V každé iteraci je možné 
-    provést pouze jeden nákup a jeden prodej každé z komodit. Po každé iteraci 
-    se uloží zaklikané změny a odešlou se k vyhodnocení. V návaznosti na tahu 
-    vás a vašich soupeřů se změní situace na trhu a upraví se ceny plodin, 
-    zvířat a produktů.</p>
+    <p>Informace o&nbsp;jednotlivých surovinách najdete v&nbsp;tabulkách v&nbsp;rozhraní hry.
+    Jediná položka, která se mění, je finální cena komodit (dospělců, plodin
+    a&nbsp;produktů). Hraje se tahově, přičemž v&nbsp;prvním kole bude 30 iterací po 30&nbsp;s
+    a&nbsp;ve druhém a&nbsp;třetím kole 45 iterací po 20&nbsp;s. V&nbsp;každé iteraci je možné
+    provést pouze jeden nákup a&nbsp;jeden prodej každé z&nbsp;komodit. Po každé iteraci
+    se uloží zaklikané změny a&nbsp;odešlou se k&nbsp;vyhodnocení. V&nbsp;návaznosti na tahu
+    vás a&nbsp;vašich soupeřů se změní situace na trhu a&nbsp;upraví se ceny plodin,
+    zvířat a&nbsp;produktů.</p>
 </section>
 
 <section class="padding-small light rules">
     <h3>Dejte si pozor na následující věci:</h3>
     <ul>
-    <li>Ceny finálních komodit se mění s časem.</li>
+    <li>Ceny finálních komodit se mění s&nbsp;časem.</li>
     <li>Když nebudete mít dost peněz na nakrmení všech zvířat, zemřou vám
-    všechna. Proto je dobré část zvířat, kterou nezvládnete uživit, vypustit 
+    všechna. Proto je dobré část zvířat, kterou nezvládnete uživit, vypustit
     do divočiny.</li>
-    <li>Sklad plodin má jen omezenou kapacitu. Po uzrání sklidíte pouze množství 
+    <li>Sklad plodin má jen omezenou kapacitu. Po uzrání sklidíte pouze množství
     odpovídající volnému místu ve skladu.</li>
-    <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují. Krmivo je 
+    <li>Nejdříve se zvířata automaticky nakrmí, až poté produkují. Krmivo je
     kupováno, nelze krmit vlastní produkcí.</li>
-    <li>Je zaznamenáván pouze první nákup/prodej dané komodity v jedné iteraci.
-    Další akce stejného typu nebudou počítány. Dobře se tedy v týmu domluvte.</li>
+    <li>Je zaznamenáván pouze první nákup/prodej dané komodity v&nbsp;jedné iteraci.
+    Další akce stejného typu nebudou počítány. Dobře se tedy v&nbsp;týmu domluvte.</li>
     </ul>
 </section>
 
@@ -71,18 +71,18 @@
     <h3>Rozhraní hry</h3>
 
     <p>Rozhraní samotné hry se vám ukáže po vybrání konkrétní hry. Hru můžete
-    vybrat ze seznamu v záložce "Hry" v horním menu. Doporučujeme si rozhraní
+    vybrat ze seznamu v&nbsp;záložce "Hry" v&nbsp;horním menu. Doporučujeme si rozhraní
     prohlédnout před samotným začátkem hry.</p>
 
     <p>V horní části stránky se nachází informační panel. Na jeho levé straně
-    vidíte vaši současnou hotovost, kapacitu skladu plodin a počet zvířat,
-    které ještě můžete během dané iterace porazit, na pravé pak číslo aktuální 
-    iterace a čas zbývající do konce iterace.</p>
+    vidíte vaši současnou hotovost, kapacitu skladu plodin a&nbsp;počet zvířat,
+    které ještě můžete během dané iterace porazit, na pravé pak číslo aktuální
+    iterace a&nbsp;čas zbývající do konce iterace.</p>
 
-    <p>V následující části najdete přehledy plodin a dobytka. V tabulkách
-    najdete důležité vlastnosti včetně měnících se cen, v grafech pak současný
-    stav svých polí a pastvin. Dále jsou zde tlačítka pro koupi, prodej, případně
-    vypuštění zvířat a hodnota maximálního množství dané operace.</p>
+    <p>V následující části najdete přehledy plodin a&nbsp;dobytka. V&nbsp;tabulkách
+    najdete důležité vlastnosti včetně měnících se cen, v&nbsp;grafech pak současný
+    stav svých polí a&nbsp;pastvin. Dále jsou zde tlačítka pro koupi, prodej, případně
+    vypuštění zvířat a&nbsp;hodnota maximálního množství dané operace.</p>
 </section>
 
 <section class="padding-small light rules">
@@ -90,8 +90,8 @@
     <div>
         <h3>Je zakázáno:</h3>
         <ul>
-        <li>Spolupracovat s kýmkoli mimo váš soutěžní tým.</li>
-        <li>Komunikovat s ostatními týmy.</li>
+        <li>Spolupracovat s&nbsp;kýmkoli mimo váš soutěžní tým.</li>
+        <li>Komunikovat s&nbsp;ostatními týmy.</li>
         <li>Používat složitější výpočetní techniku.</li>
         </ul>
     </div>
@@ -100,9 +100,9 @@
 
         <ul>
         <li>Komunikovat se členy vlastního týmu.</li>
-        <li>Obsluhovat aplikaci z více zařízení najednou.</li>
+        <li>Obsluhovat aplikaci z&nbsp;více zařízení najednou.</li>
         <li>Dělat si poznámky na papír/do počítače, používat kalkulačku.</li>
-        <li>Jíst a pít v průběhu soutěže.</li>
+        <li>Jíst a&nbsp;pít v&nbsp;průběhu soutěže.</li>
         </ul>
     </div>
 </div>
@@ -112,9 +112,9 @@
     <h3>Hodnocení:</h3>
     <p>
         <ul>
-        <li>Zisk z jednotlivých kol se sčítá a převádí na body. Tvoří cca 60 %
+        <li>Zisk z&nbsp;jednotlivých kol se sčítá a&nbsp;převádí na body. Tvoří cca 60&nbsp;%
         celkového hodnocení.</li>
-        <li>Po skončení hry se s vámi orgové na 5 minut spojí a položí vám pár otázek.
+        <li>Po skončení hry se s&nbsp;vámi orgové na 5 minut spojí a&nbsp;položí vám pár otázek.
         Rozhovor bude nahráván. Buďte na to prosím připraveni po skončení posledního kola hry.</li>
         </ul>
     </p>
