Add nice error messages

--- a/pastvina/templates/pastvina/time_check.html
+++ b/pastvina/templates/pastvina/time_check.html
@@ -54,7 +54,7 @@
                 console.log(data);
                 if (!updateResults(data.request_time, data.server_time, responseTime)) {
                     console.error("Nastala chyba při komunikaci se serverem se serverem.");
-                    alert("Nastala chyba při komunikaci se serverem se serverem.");
+                    addMessage("error", "Nastala chyba při komunikaci se serverem se serverem.", true);
                 }
             })
             .fail(function(error, textStatus) {
@@ -69,7 +69,7 @@
                     console.log(error);
                 }
                 console.error("Nepodařilo se spojit se serverem.\n" + userErrorText);
-                alert("Nepodařilo se spojit se serverem.\n" + userErrorText);
+                addMessage("error", "Nepodařilo se spojit se serverem.\n" + userErrorText, true);
             });
         }
 
