--- a/pastvina/templates/pastvina/game.html
+++ b/pastvina/templates/pastvina/game.html
@@ -5,8 +5,10 @@
 {% block title %} {{ round.name }} | Logika N-Trophy {% endblock%}
 
 {% block head %}
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<link href="{% static "pastvina/css/jquery.floatcard.css" %}" rel="stylesheet">
 <script>var csrf_token="{{ csrf_token }}";</script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static "pastvina/js/jquery.floatcard.js" %}"></script>
 <script src="{% static "pastvina/js/update_charts.js" %}"></script>
 <script src="{% static "pastvina/js/trade.js" %}"></script>
 {% endblock %}
