Use floatcard directly

--- a/pastvina/templates/pastvina/base.html
+++ b/pastvina/templates/pastvina/base.html
@@ -12,8 +12,10 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
 <link href="{% static "pastvina/fonts/font-awesome/css/all.css" %}" rel="stylesheet">
 <link href="{% static "pastvina/css/jquery-modal.css" %}" rel="stylesheet">
+<link href="{% static "pastvina/css/jquery.floatcard.css" %}" rel="stylesheet">
 <script src="{% static "pastvina/js/jquery.js" %}"></script>
 <script src="{% static "pastvina/js/jquery-modal.js" %}"></script>
+<script src="{% static "pastvina/js/jquery.floatcard.js" %}"></script>
 
 <script>
   $(function() {
