--- a/pastvina/templates/pastvina/time_check.html
+++ b/pastvina/templates/pastvina/time_check.html
@@ -72,7 +72,7 @@
                     console.log(error);
                 }
                 console.error("Nepodařilo se spojit se serverem.\n" + userErrorText);
-                $.floatcard("Nepodařilo se spojit se serverem.\n" + userErrorText,{
+                $.floatcard("Nepodařilo se spojit se serverem.",{
                         position: "left-bottom",
                         state: "error",
                     });
