--- a/pastvina/static/pastvina/css/jquery.floatcard.css
+++ b/pastvina/static/pastvina/css/jquery.floatcard.css
@@ -53,6 +53,8 @@
 	display: flex;
 	align-items: stretch;
 	flex-direction: row-reverse;
+	max-width: 400px;
+	max-height: 80px;
 }
 
 .ui-floatcard-container {
