Allow multiple replays

--- a/pastvina/templates/pastvina/game_replay.html
+++ b/pastvina/templates/pastvina/game_replay.html
@@ -51,6 +51,7 @@
         if (currentTickIndex >= maxTickIndex) {
             if (replayHandle != null) {
                 clearInterval(replayHandle);
+                replayHandle = null;
                 console.log("Replay ended");
             }
             return;
